--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "seed:excel": "node scripts/seed-from-xlsx.mjs data.xlsx"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -24,6 +25,7 @@
     "date-fns": "^4.1.0",
     "i18next": "^25.5.2",
     "lucide-react": "^0.544.0",
+    "mongodb": "^6.9.0",
     "msw": "^2.11.3",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
@@ -34,6 +36,7 @@
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.11",
     "zustand": "^5.0.8"
   },
