--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
                     "build":  "next build --turbopack",
                     "start":  "next start",
                     "lint":  "eslint",
-                    "seed:excel":  "node scripts/seed-from-xlsx.mjs data.xlsx"
+    "seed:excel":  "node scripts/seed-from-xlsx.mjs data.xlsx",
+    "seed:floors": "node scripts/seed-specialty-floors.mjs \"pisos por especialidad.xlsx\""
                 },
     "dependencies":  {
                          "@dnd-kit/core":  "^6.3.1",
